--- a/E05-prophet.ipynb
+++ b/E05-prophet.ipynb
@@ -14,6 +14,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Integrantes\n",
+    "\n",
+    "* Juan Sebastian Rincón H. - 201214767\n",
+    "* Angie Paola Chacón - 201012536\n",
+    "* Alexander Camargo - 200911325\n",
+    "* Juan Fernando Ortiz - 200623117"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
